# devpulse-client-v2

./: .gitignore  README.md  pyproject.toml
src/devpulse_client/: __main__.py
src/devpulse_client/app/: app.py
src/devpulse_client/auth/: __main__.py
src/devpulse_client/auth/client/: auth_client.py
src/devpulse_client/auth/collectors/: __init__.py  device_collector.py
src/devpulse_client/auth/models/: enrollment_models.py
src/devpulse_client/cli/: __init__.py  commands.py
src/devpulse_client/config/: __init__.py  tracker_config.py
src/devpulse_client/core/: __init__.py  app.py
src/devpulse_client/core/activity_state_tracker/: __init__.py  activity_state_task.py  idle_detector.py  screen_lock_detector.py  screen_locker.py
src/devpulse_client/core/captcha/: __init__.py  captcha_task.py
src/devpulse_client/core/heartbeat/: __init__.py  heartbeat_task.py
src/devpulse_client/core/screenshot_tracker/: __init__.py  screenshot_capturer.py  screenshot_task.py
src/devpulse_client/core/signal_handler/: signal_handler.py
src/devpulse_client/core/window_tracker/: __init__.py  window_task.py  window_title_provider.py
src/devpulse_client/ingest/client/: event_client.py
src/devpulse_client/ingest/models/: event_models.py
src/devpulse_client/logger/: logger_setup.py
src/devpulse_client/queue/: __init__.py  event_store.py
src/devpulse_client/tables/: activity_table.py
